spring boot app commit with embedded h2 db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#making the data permanent even after closing the server
+spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.hibernate.ddl-auto=update
 
+#for accessing the property in java file
+#custom property for url when an error occurs
+api_doc_url=http://api.localhost.com
